[package]
name = "tonic-example"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1"
axum = "0.2"
clap = "~3.0.0-beta.4"
hyper = { version = "0.14", features = ["full"] }
pin-project = "1"
prost = "0.8"
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.5", features = ["tls", "tls-roots", "prost"] }
tower = { version = "0.4", features = ["full"] }

[build-dependencies]
tonic-build = { version = "0.5", features = ["prost"] }
