[package]
name = "tonic-example"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = "0.6.16"
clap = { version = "4.2.3", features = ["derive"] }
hyper = { version = "0.14", features = ["full"] }
pin-project = "1"
prost = "0.11.9"
tokio = { version = "1", features = ["full"] }
tonic = "0.9.2"
tower = { version = "0.4", features = ["full"] }

[build-dependencies]
tonic-build = { version = "0.9.2", features = ["prost"] }
