[package]
name = "tonic-example"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
axum = "0.6.20"
clap = { version = "4.5.28", features = ["derive"] }
hyper = { version = "0.14", features = ["full"] }
pin-project = "1"
prost = "0.11.9"
tokio = { version = "1.43.0", features = ["full"] }
tonic = "0.9.2"
tower = { version = "0.5.2", features = ["full"] }

[build-dependencies]
tonic-build = { version = "0.11.0", features = ["prost"] }
